Added font awesome gem and logo to navbar

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,5 +14,10 @@
  *= require_self
  */
 
+/* Bootstrap */
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+/* FontAwesome */
+@import "font-awesome-sprockets";
+@import "font-awesome";
