Added validations and create action

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,6 +33,10 @@
 
 
 <div class="container">
+  <% flash.each do |k,v| %>
+    <%= content_tag :div, v, class: "alert alert-#{k}" %>
+  <% end %>
+  
   <%= yield %>
 </div>
 </body>
