--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -8,8 +8,5 @@
 @import "font-awesome";
 
 body{
-    background: #83a4d4; /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #83a4d4 , #b6fbff); /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #83a4d4 , #b6fbff); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-        
+    background: #ffffff; /* fallback for old browsers */
 }
