Added stripe js

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="jumbotron text-center">
     <h1>Welcome to Dev Match</h1>
-    <h3>A membership site where entrepreneurs can meet developmers.</h3>
+    <h3>A membership site where entrepreneurs can meet developers.</h3>
 </div>
 <div class="row">
     <div class="col-md-6">
